# QTail

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CMakeLists.txt~  main.cpp  version.h.in
src/data/: FileWatcher.cpp  FileWatcher.h
src/engine/: ApplicationInterface.cpp  CMakeLists.txt  ColumnConfiguration.cpp  ColumnConfigurationHelper.cpp  DateTimeConfiguration.cpp  DateTimeConfigurationHelper.cpp  FileReadLogic.cpp  FileReadLogic.h  FileViewInterface.cpp  FileWatcher.cpp  FileWatcher.h  FileWatcherInterface.cpp  FilterGroup.cpp  FilterRule.cpp  HighlightingRule.cpp  ReloadAppendLogic.cpp  ReloadAppendLogic.h  SelectionConfiguration.cpp  SelectionConfigurationHelper.cpp  TailEngine.cpp  TailEngine.h  TextConfiguration.cpp  TextConfigurationHelper.cpp  TextViewSettings.cpp
src/engine/include/: ApplicationInterface.h  FileViewInterface.h  FileWatcherInterface.h  FilterGroup.h  FilterRule.h  HighlightingRule.h  TextViewSettings.h
src/engine/include/columnize/: ColumnConfiguration.h  ColumnConfigurationHelper.cpp  ColumnConfigurationHelper.h  DateTimeConfiguration.h  DateTimeConfigurationHelper.h  SelectionConfiguration.h  SelectionConfigurationHelper.h  TextConfiguration.h  TextConfigurationHelper.h  columnize_globals.h
src/gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  CMakeLists.txt~  FileListItemWidget.cpp  FileListItemWidget.h  FileListItemWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlainTextEdit.cpp  PlainTextEdit.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  ViewApplication.cpp  ViewApplication.h  main.cpp  resources.qrc  windows_resources.rc
src/gui/columnize/: CMakeLists.txt  ColumnDefinitionDelegate.cpp  ColumnDefinitionDelegate.h  ColumnDefinitionDialog.cpp  ColumnDefinitionDialog.h  ColumnDefinitionDialog.ui  ColumnDefinitionFactory.cpp  ColumnDefinitionFactory.h  ColumnDefinitionInterface.cpp  ColumnDefinitionInterface.h  ColumnGlobals.h  ColumnizeDialog.cpp  ColumnizeDialog.h  ColumnizeDialog.ui
src/gui/columnize/app/: AppColumnDefinitionFactory.cpp  AppColumnDefinitionFactory.h  DateTimeConfigWidget.cpp  DateTimeConfigWidget.h  DateTimeConfigWidget.ui  DateTimeDefinition.cpp  DateTimeDefinition.h  DateTimeHelpWidget.cpp  DateTimeHelpWidget.ui  SelectionDefinition.h  TextDefinition.h
src/gui/file_views/: FileListItemView.cpp  FileListItemView.h  FileListItemWidget.cpp  FileListItemWidget.h  FileListItemWidget.ui  LineNumberArea.cpp  LineNumberArea.h  PlainTextEdit.cpp  PlainTextEdit.cpp.autosave  PlainTextEdit.h  PlainTextEdit.ui  PlainTextView.cpp  PlainTextView.h  PlainTextViewWidget.cpp  PlainTextViewWidget.h  PlainTextViewWidget.ui  SearchBar.cpp  SearchBar.h  SearchBar.ui  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/gui/filter/: FileFilterWidget.cpp  FileFilterWidget.h  FileFilterWidget.ui  FilterDialog.cpp  FilterDialog.h  FilterDialog.ui
src/gui/highlighting/: ColorPicker.cpp  ColorPicker.h  ColorPicker.ui  ColorPickerListItemWidget.cpp  ColorPickerListItemWidget.h  ColorPickerListItemWidget.ui  FontPicker.cpp  FontPicker.h  FontPicker.ui  HighlightListItemDelegate.cpp  HighlightListItemDelegate.h  HighlightingDialog.cpp  HighlightingDialog.h  HighlightingDialog.ui
src/gui/tools/: OpenFileSettings.cpp  OpenFileSettings.h  Settings.cpp  Settings.h
src/gui/translations/: QTail_de.ts  QTail_en.ts
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  MocApplicationInterface.cpp  MocApplicationInterface.h  MocFileView.cpp  MocFileView.h  MocFileWatcher.cpp  MocFileWatcher.h  TestCommon.cpp  TestCommon.h
tests/data/FileWatcher/: CMakeLists.txt  tst_FileWatcherTest.cpp
tests/engine/: CMakeLists.txt
tests/engine/FileReadLogic/: CMakeLists.txt  tst_FileReadLogicTest.cpp
tests/engine/FileWatcher/: CMakeLists.txt  tst_FileWatcherTest.cpp
tests/engine/FilterGroup/: CMakeLists.txt  tst_FilterGroupTest.cpp
tests/engine/FilterRule/: CMakeLists.txt  tst_FilterRuleTest.cpp
tests/engine/HighlightingRule/: CMakeLists.txt  tst_HighlightingRuleTest.cpp
tests/engine/ReloadAppendLogic/: CMakeLists.txt  tst_ReloadAppendLogicTest.cpp
tests/engine/TailEngine/: CMakeLists.txt  CMakeLists.txt~  tst_TailEngineTest.cpp
tests/engine/columnize/: CMakeLists.txt
tests/engine/columnize/ColumnConfiguration/: CMakeLists.txt  tst_ColumnConfigurationTest.cpp
tests/engine/columnize/ColumnConfigurationHelper/: CMakeLists.txt  tst_ColumnConfigurationHelperTest.cpp
tests/engine/columnize/DateTimeConfiguration/: CMakeLists.txt  tst_DateTimeConfigurationTest.cpp
tests/engine/columnize/DateTimeConfigurationHelper/: CMakeLists.txt  tst_DateTimeConfigurationHelperTest.cpp
tests/engine/columnize/SelectionConfiguration/: CMakeLists.txt  tst_SelectionConfigurationTest.cpp
tests/engine/columnize/SelectionConfigurationHelper/: CMakeLists.txt  tst_SelectionConfigurationHelperTest.cpp
tests/engine/columnize/TextConfiguration/: CMakeLists.txt  tst_TextConfigurationTest.cpp
tests/engine/columnize/TextConfigurationHelper/: CMakeLists.txt  tst_TextConfigurationHelperTest.cpp
tests/gui/: CMakeLists.txt
tests/gui/FileListItemWidget/: CMakeLists.txt  tst_FileListItemWidgetTest.cpp
tests/gui/MainWindow/: CMakeLists.txt  tst_MainWindowTest.cpp
tests/gui/PreferencesDialog/: CMakeLists.txt  tst_PreferencesDialogTest.cpp
tests/gui/columnize/: CMakeLists.txt
tests/gui/columnize/app/: CMakeLists.txt
tests/gui/file_views/: CMakeLists.txt
tests/gui/file_views/FileListItemView/: CMakeLists.txt  tst_FileListItemViewTest.cpp
tests/gui/file_views/FileListItemWidget/: CMakeLists.txt  tst_FileListItemWidgetTest.cpp
tests/gui/file_views/PlainTextEdit/: CMakeLists.txt  tst_PlainTextEditTest.cpp
tests/gui/file_views/PlainTextView/: CMakeLists.txt  tst_PlainTextViewTest.cpp
tests/gui/file_views/PlainTextViewWidget/: CMakeLists.txt  (+1 more)
tests/gui/filter/: CMakeLists.txt
tests/gui/highlighting/: CMakeLists.txt
tests/gui/tools/: CMakeLists.txt
tests/tools/: CMakeLists.txt
tests/tools/FileAppender/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
(+35 files in other folders)
